found and squashed bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,6 +325,8 @@ section#introduction div img {
   opacity: 0%;
   -webkit-transition: .5s;
   transition: .5s;
+  height: auto;
+  width: 250px;
 }
 
 section#introduction div .array {
