--- a/assets/sass/pages/_interests.scss
+++ b/assets/sass/pages/_interests.scss
@@ -17,7 +17,7 @@ ul .card{
 }
 
 .thumbnail{
-    background-image: url()
-    width:547px;
-    height:365px;
+    // background-image: url();
+    width:  547px;
+    height: 365px;
 }
