--- a/assets/sass/pages/_introduction.scss
+++ b/assets/sass/pages/_introduction.scss
@@ -5,6 +5,8 @@ section#introduction{
             padding: 20px 0px 0px 0px;
             opacity: 0%;
             transition: .5s;
+            height: auto;
+            width: 250px;
         }
         .array{
             transition: 1s;
